# autoshop-management

./: .dockerignore  .env.example  .gitignore  Dockerfile  command.py  conftest.py  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  pytest.ini  soberdev  tailwind.config.js
.github/workflows/: release.yml
assets/static/CACHE/css/: output.051a8d1d8c65.css  output.d5115a636615.css
assets/static/js/: main.js
assets/static/src/: input.css  output.css
config/: urls.py
config/settings/: base.py  base_remote.py  development.py  local.py
config/settings/extension/: __init__.py
config/settings/test/: local.py
core/authentication/: manager.py  models.py  tests.py
core/authentication/management/commands/: create_admin.py
core/authentication/tests_tools/: fixtures.py
core/dashboard/: tests.py  urls.py  utils.py
core/dashboard/context/: logo.py  urls.py
core/dashboard/management/commands/: query_json.py
core/dashboard/serializers/: entity.py  instrument.py  transactions.py
core/dashboard/templates/: data.html  entity.html  forms.html  index.html  instrument.html  transactions.html
core/dashboard/templatetags/: currency_tags.py
core/dashboard/views/data/: dataviews.py
core/dashboard/views/entity/: views.py
core/dashboard/views/forms/: formviews.py
core/dashboard/views/home/: homeviews.py
core/dashboard/views/instrument/: views.py
core/dashboard/views/transactions/: views.py
core/ledger/: admin.py  apps.py  manager.py  models.py  tests.py
core/ledger/management/commands/: generate_dummy_data.py
core/ledger/migrations/: 0001_initial.py  0002_alter_transaction_trx_category.py  0002_remove_transaction_trx_category_and_more.py  0003_alter_transaction_amount.py  0004_alter_transaction_managers_alter_accounts_user.py
core/ledger/tests_tools/: fixtures.py
middlewares/: request_id.py
script/: entrypoint.sh
templates/: base.html  dashboard_base.html
templates/components/cards/: ecard.html  icard.html
templates/components/forms/: entity_form.html  instrument_form.html  transaction_form.html
templates/components/menu/: forms.html  menu.html
templates/components/modals/: instrument.html  properties.html
templates/components/navbar/: dashboard_nav.html
templates/components/section/: dashboard_nav.html  grid_entities.html  grid_instrument.html  sidebar.html
templates/components/textlink/: textmenu.html
templates/pages/: entity_detail.html
