[project]
name = "car-finance"
version = "0.1.0"
description = ""
authors = [{ name = "rede akbar wijaya", email = "rede@soberdev.com" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "django>=4.2.3,<5",
    "pydantic>=2.4.2,<3",
    "python-dotenv>=0.21.0,<0.22",
    "django-extensions>=3.2.1,<4",
    "django-simple-history>=3.4.0,<4",
    "django-structlog>=6.0.0,<7",
    "django-unfold>=0.12.0,<0.13",
    "django-debug-toolbar>=3.8.1,<4",
    "django-lifecycle>=1.0.0,<2",
    "daphne>=4.0.0,<5",
    "pydantic-settings>=2.0.3,<3",
    "factory-boy>=3.3.0,<4",
    "pytest-factoryboy>=2.6.0,<3",
    "faker-vehicle>=0.2.0,<0.3",
    "doit>=0.36.0,<0.37",
    "djangorestframework>=3.15.2",
    "django-compressor>=4.5.1",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "black>=22.12.0,<23",
    "flake8>=6.0.0,<7",
    "ipython>=8.7.0,<9",
    "pre-commit>=2.21.0,<3",
]
test = [
    "pytest>=7.2.0,<8",
    "pytest-sugar>=0.9.6,<0.10",
    "pytest-mock>=3.10.0,<4",
    "pytest-django>=4.5.2,<5",
    "faker>=15.3.4,<16",
]
remote = [
    "gunicorn>=20.1.0,<21",
    "uvicorn[standard]>=0.21.1,<0.22",
    "whitenoise>=6.6.0,<7",
]
[tool.uv]
default-groups = [
    "dev",
    "test",
]
[tool.doit]
dodoFile="command.py"

